fix: vertical scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@
 
 html {
   font-size: 16px;
-  overflow-y: scroll;
 }
 
 body {
